crates/check_cli/tests/snapshots/main_cases_check_json_support/always_disable_trailing_commas_check_json.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.json`

```json
{
  "formatter": {
    "indentStyle": "space",
    "indentWidth": 4
  },
  "json": {
    "formatter": {
      "trailingCommas": "all"
    }
  }
}
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
