crates/check_cli/tests/snapshots/main_cases_check_json_support/check_check_json.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.json`

```json
{
  "linter": {
    "rules": {
      "recommended": true,
      "suspicious": {
        "noDebugger": "off"
      }
    }
  }
}
```

## `fix.js`

```js
debugger;

```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
