crates/check_cli/tests/snapshots/main_cases_check_json_support/check_json_is_not_ignored.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{
  "files": { "includes": ["**", "!*.json"] },
  "formatter": {
    "enabled": false
  }
}
```

## `file.js`

```js
  statement(  )  
```

## `file.json`

```json
  statement(  )  
```

# Emitted Messages

```block
Checked 2 files in <TIME>. No fixes applied.
```
