crates/check_cli/tests/snapshots/main_cases_check_json_support/ci_check_json.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.json`

```json
{
  "formatter": {
    "enabled": false
  }
}
```

## `file.js`

```js
  statement(  )  
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
