crates/check_cli/tests/snapshots/main_cases_check_json_support/formatter_check_json.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.json`

```json
{
  "formatter": {
    "enabled": true,
    "lineWidth": 160,
    "indentStyle": "space",
    "indentWidth": 6
  }
}
```

## `file.js`

```js
function f() {
        return {
                a,
                b,
        };
}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
